package com.sep490.slms2026.entity;

import com.sep490.slms2026.enums.RenovationSessionStatus;
import jakarta.persistence.*;
import lombok.*;

import java.io.Serializable;
import java.time.LocalDate;
import java.time.LocalDateTime;

@Entity
@Table(
        name = "renovation_sessions",
        uniqueConstraints = @UniqueConstraint(columnNames = {"property_id", "session_number"}))
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class RenovationSession implements Serializable {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "property_id", nullable = false)
    private Property property;

    @Column(name = "session_number", nullable = false)
    private Integer sessionNumber;

    @Column(name = "start_date")
    private LocalDate startDate;

    @Column(name = "end_date")
    private LocalDate endDate;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", nullable = false)
    @Builder.Default
    private RenovationSessionStatus status = RenovationSessionStatus.IN_PROGRESS;

    @Column(name = "disabled_at")
    private LocalDateTime disabledAt;

    @Column(name = "created_at")
    private LocalDateTime createdAt;
}
